# ModularGeoFM

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/: metadata.yaml
src/backbones/decoder/: satmae_decoder.py
src/backbones/encoder/: clay_encoder.py  copernicusfm_encoder.py  terramind_encoder.py
src/backbones/models/: clay_models.py  copernicusfm_models.py  terramind_models.py
src/datacollection/: sentinel2_collection.py
src/datamodules/: clay_datamodule.py  copernicusfm_datamodule.py
src/lightningmodule/: copernicusfm_module.py
src/modulargeofm/datacollection/: collect_imagery.py
src/modulargeofm/datamodules/: clay_datamodule.py  copernicusfm_datamodule.py  shared.py
src/modulargeofm/lightningmodules/: clay_module.py  copernicusfm_module.py
src/modulargeofm/utils/: __init__.py  callbacks.py  losses.py  metrics.py  shared.py
src/trainers/: clay_trainer.py
src/utils/: __init__.py  clay.py  losses.py
src/utils/copernicus_fm/: dynamic_hypernetwork.py
tests/test_datamodules/: test_clay_datamodule.py  test_copernicusfm_datamodule.py  test_datamodule_shared.py
tests/test_utils/: test_losses.py  test_metrics.py  test_shared.py  test_util_shared.py
tutorials/: 01_Satellite_Data_Pipeline.ipynb
tutorials/01_Satellite_Data_Pipeline/: 01_Satellite_Data_Pipeline.ipynb
tutorials/02_Evaluation_Satellite_Data_Pipeline/: GPUlog_on_OnTheFly.csv  GPUlog_on_PreComputed.csv  README.md  running_test_on_OnTheFly.py  running_test_on_Precomputed.py  vis_gpu_util.ipynb
(+12 files in other folders)
